--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=movify
 spring.data.mongodb.repositories.type=auto
+spring.data.mongodb.auto-index-creation=true
